remove unnecessary future usage